--- a/portfolio-website/src/components/header/header.css
+++ b/portfolio-website/src/components/header/header.css
@@ -42,13 +42,13 @@ header {
 
 .me {
     background: linear-gradient(var(--color-primary), transparent);
-    width: 22rem;
-    height: 30rem;
+    width: 20rem;
+    height: 18rem;
     position: absolute;
     left: 50%;
     transform: translateX(-50%);
     margin-top: 4rem;
-    border-radius: 12rem 12rem 0 0;
+    border-radius: 50% 50% 50% 50%;
     overflow: hidden;
     padding: 5rem 1.5rem 1.5rem 1.5rem;
 }
