--- a/portfolio-website/src/index.css
+++ b/portfolio-website/src/index.css
@@ -11,7 +11,7 @@
 }
 
 :root {
-    --color-bg: #1f1f38;
+    --color-bg: #121212;
     --color-bg-variant: #2c2c6c;
     --color-primary: #4db5ff;
     --color-primary-variant:rgba(77, 181, 255, 0.4);
@@ -38,7 +38,6 @@ body {
     background: var(--color-bg);
     color: var(--color-white);
     line-height: 1.7;
-    background-image: url(../src/assets/bg-texture-cat-han.jpg);
     background-size: cover;
 }
 
