added styling for porfolio and experience components + media queries finished, need to refactor code

--- a/portfolio-website/src/components/header/header.css
+++ b/portfolio-website/src/components/header/header.css
@@ -5,8 +5,9 @@ header {
 }
 
 .header__container {
+    /* background: red; */
     text-align: center;
-    height: 100%;
+    height: 55%;
     position: relative;
 }
 
@@ -43,7 +44,7 @@ header {
 .me {
     background: linear-gradient(var(--color-primary), transparent);
     width: 20rem;
-    height: 18rem;
+    height: 20rem;
     position: absolute;
     left: 50%;
     transform: translateX(-50%);
@@ -69,6 +70,10 @@ header {
 @media screen and (max-width: 1024px) {
     header {
         height: 68vh;
+    }
+
+    .header__container {
+        height: 85%;
     }
 }
 
