--- a/portfolio-website/src/index.css
+++ b/portfolio-website/src/index.css
@@ -11,7 +11,7 @@
 }
 
 :root {
-    --color-bg: #121212;
+    --color-bg: #1e1e1e;
     --color-bg-variant: #2c2c6c;
     --color-primary: #4db5ff;
     --color-primary-variant:rgba(77, 181, 255, 0.4);
